# Semestral

ESP32-CFG/: CMakeLists.txt  CMakeLists.txt.user.9441d7f  CMakeLists.txt.user.c50a5f5
ESP32-CFG/include/: about.h  colordefinitions.h  configure.h  connect.h  fontsizes.h  fontweights.h  iconpainter.h  livefeed.h  mainwindow.h  recordsizes.h  serialcommands.h  serialdefault.h  serialport.h  settings.h  stringparser.h  structs.h  styleloader.h  weathericon.h  weeklyweatherentry.h
ESP32-CFG/resources/: res.qrc
ESP32-CFG/resources/styles/about/: link.qss
ESP32-CFG/resources/styles/configure/: input.qss
ESP32-CFG/resources/styles/connect/: alert.qss  button.qss  connect_button.qss  select.qss  title.qss
ESP32-CFG/resources/styles/left_menu/: left_menu_default.qss  left_menu_focused.qss
ESP32-CFG/resources/styles/live_feed/: live_feed_qframe.qss  live_feed_qframe_noborder.qss  live_feed_qlabel.qss  live_feed_qline.qss
ESP32-CFG/resources/ui/: about.ui  configure.ui  connect.ui  livefeed.ui  mainwindow.ui
ESP32-CFG/src/: about.cpp  colordefinitions.cpp  configure.cpp  connect.cpp  iconpainter.cpp  livefeed.cpp  main.cpp  mainwindow.cpp  serialport.cpp  stringparser.cpp  styleloader.cpp  weathericon.cpp  weeklyweatherentry.cpp
arduino experiments/read_bytes_from_serial/: read_bytes_from_serial.ino
artwork/: icon.ai
build-ESP32-CFG-Desktop_Qt_6_5_1_MinGW_64_bit-Debug/: .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
build-ESP32-CFG-Desktop_Qt_6_5_1_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
build-ESP32-CFG-Desktop_Qt_6_5_1_MinGW_64_bit-Debug/ESP32-CFG_autogen/: deps
build-ESP32-CFG-Desktop_Qt_6_5_1_MinGW_64_bit-Debug/ESP32-CFG_autogen/6YEA5652QU/: moc_connect.cpp.d  moc_livefeed.cpp.d  moc_mainwindow.cpp.d  moc_serialport.cpp.d  moc_settingsdialog.cpp
build-ESP32-CFG-Desktop_Qt_6_5_1_MinGW_64_bit-Debug/ESP32-CFG_autogen/include/: ui_about.h  ui_livefeed.h  ui_settingsdialog.h
build-ESP32-CFG-Desktop_Qt_6_5_1_MinGW_64_bit-MinSizeRel/: CMakeCache.txt  build.ninja  cmake_install.cmake
build-ESP32-CFG-Desktop_Qt_6_5_1_MinGW_64_bit-MinSizeRel/ESP32-CFG_autogen/6YEA5652QU/: moc_about.cpp.d  moc_configure.cpp.d  moc_connect.cpp.d  moc_livefeed.cpp  moc_serialport.cpp.d
build-ESP32-CFG-Desktop_Qt_6_5_1_MinGW_64_bit-MinSizeRel/ESP32-CFG_autogen/include/: ui_mainwindow.h
build-ESP32-CFG-Desktop_Qt_6_5_1_MinGW_64_bit-Profile/: build.ninja  qtcsettings.cmake
build-ESP32-CFG-Desktop_Qt_6_5_1_MinGW_64_bit-Profile/.qt/: QtDeploySupport.cmake
build-ESP32-CFG-Desktop_Qt_6_5_1_MinGW_64_bit-Release/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja  cmake_install.cmake  qtcsettings.cmake
build-ESP32-CFG-Desktop_Qt_6_5_1_MinGW_64_bit-Release/.qt/: QtDeploySupport.cmake
build-ESP32-CFG-Desktop_Qt_6_5_1_MinGW_64_bit-Release/.qtc_clangd/: compile_commands.json
build-ESP32-CFG-Desktop_Qt_6_5_1_MinGW_64_bit-Release/ESP32-CFG_autogen/: deps
build-ESP32-CFG-Desktop_Qt_6_5_1_MinGW_64_bit-Release/ESP32-CFG_autogen/6YEA5652QU/: moc_about.cpp.d  moc_configure.cpp.d  (+4 more)
old builds/build-ESP32-CFG-Desktop_Qt_6_5_1_MinGW_64_bit-Debug/: .ninja_deps
old builds/build-ESP32-CFG-Desktop_Qt_6_5_1_MinGW_64_bit-MinSizeRel/: .ninja_deps  .ninja_log  qtcsettings.cmake
old builds/build-ESP32-CFG-Desktop_Qt_6_5_1_MinGW_64_bit-Profile/: CMakeCache.txt  cmake_install.cmake
old builds/build-ESP32-CFG-Desktop_Qt_6_5_1_MinGW_64_bit-Release/: .ninja_deps  CMakeCache.txt.prev  cmake_install.cmake  qtcsettings.cmake
(+1865 files in other folders)
